kotlin-parser/src/test/semlang/validatorTests/fail/integerLiteral4.sem
function myStuff.myFunction(): Integer {
  return Integer."-0"
}
